--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <a href="#home" class="active">Home</a>
                 <a href="#products">Products</a>
                 <a href="#contact">Contact</a>
-                <a href="#about">About Us</a>
+                <a href="#aboutus">About Us</a>
             </nav>
         </header>
         <section class="parallax">
@@ -38,8 +38,17 @@
                 text.style.marginTop = value * 0.4 + 'px';
             })
         </script>
-        <section class="sec1">
+        <section id="home">
             <h2>Welcome</h2>
         </section>
+        <section id="products">
+
+        </section>
+        <section id="contact">
+
+        </section>
+        <footer id="aboutus">
+            
+        </footer>
     </body>
 </html>
