adding offline fonts

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>Kuppies_And_Colours</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/styles.css"> 
+        <link rel="fontstylesheet" href="/font.css">
     </head>
     <body>
         <header>
