--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html lang="en">
     <head>
         <title>Kuppies_And_Colours</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="/styles.css"> 
         <link rel="fontstylesheet" href="/font.css">
+        <link rel="smallscreenstyle" href="/smallscreen.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
-        <div id="progressbar"></div>
-        <div id="scrollpath"></div>
         <header>
             <img src="/images/KACLogo.png" class="logo">
             <nav class="font-effect-splintered">
