--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <a href="#aboutus">About Us</a>
             </nav>
         </header>
+        <script src="/kac.JS"></script>
         <section class="parallax">
             <img src="/images/prt4.png" id="bg">
             <img src="/images/prt1.png" id="grl1">
