--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
                 <a href="#products">Products</a>
                 <a href="#contact">Contact</a>
                 <a href="#aboutus">About Us</a>
+                <img src="/images/menu.png" alt="menu hamburger" class="menu-hamburger">
             </nav>
         </header>
 <!--SECTIONS HERE-->
