--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <body>
         <header>
             <img src="/images/KACLogo.png" class="logo">
-            <nav class="font-effect-splintered">
-                <a href="#home" class="active">Home</a>
+            <nav id="navbar">
+                <a href="#about us">About Us</a>
+                <a href="#contact">contact</a>
                 <a href="#products">Products</a>
-                <a href="#contact">Contact</a>
-                <a href="#aboutus">About Us</a>
+                <a href="#home" class="active">Home</a>
                 <img src="/images/menu.png" alt="menu hamburger" class="menu-hamburger">
             </nav>
         </header>
